fix overflow (horizontal scrolling) issues

--- a/app/components/application/application.styl
+++ b/app/components/application/application.styl
@@ -88,9 +88,11 @@
 
   .steps
     width 80em
-    max-width calc(100vw - 2em)
+    max-width 100vw
     justify-content center
     position relative
+    overflow hidden
+    padding 0 1em 1em
 
     .step
       position relative
